2013-09-28 Niels van Eldik
	* cleanup config
	* tagged as MuonTrackingGeometry-01-00-02

2013-09-24 Sarka Todorova <sarka.todorova@cern.ch>
	* update (BinUtility,MaterialProperties) 
	* tagged as MuonTrackingGeometry-01-00-01

2013-08-22 Sarka Todorova <sarka.todorova@cern.ch>
	* migration to Eigen and new Trk::BinUtilities 
	* tagged as MuonTrackingGeometry-01-00-00

2013-05-12 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix in the position of NSW layers 
	* tagged as MuonTrackingGeometry-00-05-55

2013-05-03 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix in the identification of NSW stations ( station layer representation)
	* tagged as MuonTrackingGeometry-00-05-54

2013-04-21 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix in the identification loop of TGC stations
	* tagged as MuonTrackingGeometry-00-05-53

2013-04-19 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix in the identification loop of NSW stations - fixes the clean-up of NSW stations, too
	* tagged as MuonTrackingGeometry-00-05-52 

2013-04-17 Sarka Todorova <sarka.todorova@cern.ch>
	* NSW layer identification
	* NSW station delete crashing in the finalization - commented for the moment
	* tagged as MuonTrackingGeometry-00-05-51 

2013-03-07 Sarka Todorova <sarka.todorova@cern.ch>
	* more flexibility for NSW layout 
	* tagged as MuonTrackingGeometry-00-05-50 

2013-03-07 Sarka Todorova <sarka.todorova@cern.ch>
	* NSW envelopes + temporary layer identification ( does not use identifiers yet ) 
	* tagged as MuonTrackingGeometry-00-05-49 

2013-02-27 Sarka Todorova <sarka.todorova@cern.ch>
	* first NSW import - no channel identification yet 
	* tagged as MuonTrackingGeometry-00-05-48 

2013-02-11 Sarka Todorova <sarka.todorova@cern.ch>
	* add python builder configuration 
	* tagged as MuonTrackingGeometry-00-05-47 

2012-07-27 Felix Rauscher
	* CLHEP 2.x
	* propdel svn:executable
	* tagged as MuonTrackingGeometry-00-05-46

2012-05-11 Sarka Todorova <sarka.todorova@cern.ch>